Fixed grid layout text overflowing page
The grid layout on mobile views had the post titles taking up more space than the content box, making for a bad UX. Now the text stays in the content box  with overflow of text applied.

--- a/client/src/components/pages/Kurated/PostGrid.css
+++ b/client/src/components/pages/Kurated/PostGrid.css
@@ -23,6 +23,7 @@
   white-space: wrap;
   overflow: hidden;
   min-height: 0%;
+  max-height: 100%;
 }
 
 .overlayImage .recentTitle {
